<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StepOut</string>
    <string name="sign_in_text">Please sign in</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">facebook</string>
    <string name="app_id">262793283921459</string>
    <string name="hello_world">Hello world!</string>
    <string name="type_short_description">Type short description here</string>
    <string name="choose_date">Choose a date</string>
    <string name="choose_time">Choose a time</string>
    <string name="save_button">Save</string>
    <string name="respond_button">Respond</string>
    <string name="hide_button">Hide</string>
    <string name="create_event_complete_all_fields_error">Complete all fields</string>
    <string name="some_error">Sorry, something went wrong</string>
    <string name="event_saved">Event has been saved</string>
    <string name="you_respond">You respond to the event</string>
    <string name="you_unrespond">You not respond to the event</string>
    <string name="saving_process">Saving...</string>
    <string name="loading_process">Loading</string>
    <string name="responding_process">Responding...</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="choose_event_category">Category</string>
    <string name="turn_on_gps_dialog">We are unable to get your location. Please turn it on in settings if you want us to redirect you directly to your location.</string>
    <string name="settings_text">Settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="provider_selected">Your location have been determined using %s</string>
    <string name="provider_enabled">New provider is enabled:</string>
    <string name="provider_disabled">Provider is disabled:</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_unresponse">I wont come</string>
    <string name="action_call">Call</string>
    <string name="create_event_button">Create event</string>
    <string name="choose_event_location_dialog">Pick location of event on map</string>
    <string name="choose_location_for_new_event">Create event here</string>
    <string name="cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh map</string>
    <string name="map_updated">Map is refreshed</string>
    <string name="action_new_event">Add event</string>
    <string name="no_search_event_dialog">Events are not found</string>
    <string name="remove_success">Event successfully removed</string>
    <string name="user_joined_event">A user just joined to this event! Attenders: %s</string>.
    <string name="user_do_not_attend_event">A user is not going to attend this event anymore! Attenders: %s</string>
    <string name="author_deleted_event">The event planned on %s has been cancelled by its author :(</string>
    <string name="attenders_text">Attenders: %s</string>
    <string name="filter_only_respond_event">I will go to</string>
    <string name="events_updated">Events updated</string>
    <string name="author_updated_event">This event has been updated by its author!</string>
    <string name="event_not_found">Event does not exist</string>
    <string name="fb_share_caption">I just created a new event via StepOut! Join me by installing this application.</string>
    <string name="fb_share_caption_as_respondent">I just joined to a new event via StepOut! Join me by installing this application.</string>

    <string-array name="event_categories">
        <item>Sport</item>
        <item>Games</item>
        <item>Communication</item>
    </string-array>

    <string-array name="action_list">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>

    <string name="user_photo">User photo</string>
    <string name="title_activity_create_event">Create event</string>
    <string name="title_activity_view_event">View event</string>
    <string name="title_activity_view_event_as_author">View event</string>
    <string name="title_activity_view_event_as_respondent">View event</string>
    <string name="title_activity_edit_event">Edit event</string>
    <string name="add_to_cal">Add to calendar</string>
    <string name="tel_not_avalible">Phone not available</string>

</resources>
