<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context="com.stepout.main.ViewEventAsAuthorActivity">

    <item android:id="@+id/action_call"
        android:title="@string/action_call"
        android:icon="@drawable/ic_action_call"
        yourapp:showAsAction="always"/>

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        yourapp:showAsAction="always"/>

    <item android:id="@+id/add_to_cal"
        android:title="@string/add_to_cal"
        android:icon="@drawable/ic_action_event"
        yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_unresponse"
        android:title="@string/action_unresponse"
        android:icon="@drawable/ic_action_remove"
        yourapp:showAsAction="always"/>
</menu>