<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        yourapp:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        yourapp:showAsAction="ifRoom|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/filter"
        yourapp:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item android:id="@+id/category_filter_placeholder"
                android:title="@string/hello_world"/>
        </menu>
    </item>
</menu>