<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.admin.stepout.CreateEventActivity">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_short_description"
            android:lines="10"
            android:gravity="top|left"
            android:scrollHorizontally="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/choose_date_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="true"
                android:text="@string/pick_a_date"/>

            <TextView
                android:id="@+id/choose_time_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="true"
                android:text="@string/pick_a_time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choose_event_category"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--<Button
            android:id="@+id/choose_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"/>

        <Button
            android:id="@+id/choose_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"/>-->

        <Button
            android:id="@+id/save_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

    </LinearLayout>
</ScrollView>